<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.3.4</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>com.notification</groupId>
	<artifactId>reddert</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>reddert</name>
	<description>notification system</description>
	<url/>
	<licenses>
		<license/>
	</licenses>
	<developers>
		<developer/>
	</developers>
	<scm>
		<connection/>
		<developerConnection/>
		<tag/>
		<url/>
	</scm>
	<properties>
		<java.version>21</java.version>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-mail</artifactId>
		</dependency>
		<dependency>
			<groupId>com.h2database</groupId>
			<artifactId>h2</artifactId>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>jakarta.validation</groupId>
			<artifactId>jakarta.validation-api</artifactId>
			<version>3.0.2</version>
		</dependency>
    <dependency>
      <groupId>com.github.davidmoten</groupId>
      <artifactId>plantuml-maven-plugin</artifactId>
      <version>0.2.12</version>
    </dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-checkstyle-plugin</artifactId>
        <version>3.5.0</version>
        <dependencies>
          <dependency>
            <groupId>com.puppycrawl.tools</groupId>
            <artifactId>checkstyle</artifactId>
            <version>10.18.2</version>        
          </dependency>
        </dependencies>
        <executions>
            <execution>
                <id>validate</id>
                <phase>validate</phase>
                <goals>
                    <goal>check</goal>
                </goals>
            </execution>
        </executions>
        <configuration>
          <configLocation>config/checkstyle/checkstyle.xml</configLocation>
        </configuration>
      </plugin>
       <plugin>
            <groupId>com.github.davidmoten</groupId>
            <artifactId>plantuml-maven-plugin</artifactId>
            <version>0.2.12</version>
            <executions>
                <execution>
                    <id>generate-diagrams</id>
                    <phase>generate-resources</phase>
                    <goals>
                        <goal>generate</goal>
                    </goals>
                    <configuration>
                        <sources>
                            <directory>${basedir}/src/main/plantuml</directory>
                            <includes>
                                <include>**/*.puml</include>
                            </includes>
                            <excludes>
                                <exclude>**/ignore-me.puml</exclude>
                            </excludes>
                        </sources>
                        <outputDirectory>${project.build.directory}/generated-diagrams</outputDirectory>
                        <formats>
                            <format>svg</format>
                        </formats>
                        <preserveDirectoryStructure>true</preserveDirectoryStructure>
                    </configuration>
                </execution>
            </executions>
        </plugin>
		</plugins>
	</build>

</project>
